--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,12 +7,13 @@ add_executable(nibbles src/main.cpp src/game.cpp src/texture/textureManager.cpp 
 src/renderer/renderer.cpp src/objects/objectManager.cpp src/objects/Entity/entityManager.cpp src/objects/map/mapManager.cpp
 src/objects/map/structure.cpp src/objects/map/dots/dotsManager.cpp src/objects/map/dots/dots.cpp
 src/objects/entity/entity.cpp src/objects/entity/pacman.cpp src/objects/entity/ghost.cpp src/objects/collisionManager/collisionManager.cpp
+src/objects/UI/UI.cpp src/objects/UI/UIObject.cpp
 
 headers/game.h headers/settings.h headers/texture/textureManager.h headers/texture/textureLoader.h 
 headers/renderer/renderer.h headers/objects/objectManager.h headers/objects/Entity/entityManager.h headers/objects/map/mapManager.h
 headers/objects/map/structure.h headers/renderer/renderObjectStructure.h headers/objects/map/dots/dotsManager.h
 headers/objects/map/dots/dots.h headers/objects/entity/entity.h headers/objects/entity/pacman.h headers/objects/entity/ghost.h
-headers//objects/collisionManager/collisionManager.h)
+headers//objects/collisionManager/collisionManager.h headers/Objects/UI/UI.h headers/objects/UI/UIObject.h)
 include_directories(headers /usr/include C:/SFML/include/SFML)
 
 set(SFML_ROOT C:/SFML)
